# polly

./: CMakeLists.txt
include/polly/: EWPTAliasAnalysis.h  LinkAllPasses.h  RegisterPasses.h  ScopDetection.h  ScopStatistics.h
lib/: CMakeLists.txt  Makefile  Polly.cpp  RegisterPasses.cpp
lib/Analysis/: CMakeLists.txt  EWPTAliasAnalysis.cpp  ScopDetection.cpp  ScopStatistics.cpp
lib/CodeGen/: CMakeLists.txt  CodeGeneration.cpp
lib/Exchange/: CMakeLists.txt
lib/Support/: CMakeLists.txt  RegisterPasses.cpp  SCEVValidator.cpp
lib/Transform/: CMakeLists.txt  Makefile
test/ScopInfo/: pointer_to_pointer.ll
test/polybench/linear-algebra/kernels/gemm/: scops.scop_func.dot  scopsonly.scop_func.dot
